
[workspace.package]
version = "0.1.0"
authors = ["Burkahrd Mittelbach <wasabi37a@googlemail.com"]
edition = "2024"

[workspace.dependencies]
congen = { path = "congen" }
congen-derive= { path = "derive" }

syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
proc-macro2 = "1.0"
quote = "1.0"
clap = { version = "4.5", features = ["string", "derive" ] }
thiserror = "2.0"

[workspace]
members = [
    "congen",
    "derive",
    "examples/basic",
    "examples/lists"
]
resolver = "3"
